<resources>
    <string name="app_name">Country Explorer App</string>
    <string name="hint_country_search">Search the country</string>
    <string name="title_favorite">Favorites countries</string>
    <string name="title_detail">Detail country</string>
    <string name="label_capital">Capital</string>
    <string name="label_region">Region</string>
    <string name="label_population">Population</string>
    <string name="label_language">Language</string>
    <string name="label_currency">Currency</string>

    <string name="empty_favorites_message">Ops… there is no favorite country added</string>
    <string name="err_no_internet_title">No connection</string>
    <string name="err_no_internet_msg">Check your internet connection and try again.</string>
    <string name="err_http_title">Problem with request</string>
    <string name="err_http_msg">Code %1$d. Please try again.</string>
    <string name="err_unknown_title">Oops, something went wrong</string>
    <string name="err_unknown_msg">Try again in a moment.</string>
    <string name="try_again_button">Try again</string>
    <string name="favorite_button">Favorite bottom</string>
    <string name="country_flag">country flag</string>
</resources>